[gd_scene load_steps=6 format=2]

[ext_resource path="res://Master.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UserInterface.gd" type="Script" id=3]
[ext_resource path="res://Scenes/AuctionHouse.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Login.tscn" type="PackedScene" id=5]

[node name="Master" type="Node2D"]
script = ExtResource( 1 )

[node name="UserInterface" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 3 )

[node name="AuctionHouse" parent="UserInterface" instance=ExtResource( 4 )]
visible = false

[node name="Inventory" parent="UserInterface" instance=ExtResource( 2 )]
visible = false

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Login" parent="." instance=ExtResource( 5 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
